--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,7 @@
 [build-system]
+build-backend = "setuptools.build_meta"
 requires = [
-    "Cython>=0.27.3",  # Note: sync with setup.py
+    "Cython >= 0.27.3",  # Note: sync with setup.py
+    "setuptools >= 40.9.0",
+    "numpy >= 1.16.2",
 ]
