--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,12 +4,11 @@ on:
   push:
     branches:
       - master
+    tags:
+      - '[0-9]+.*'
   pull_request:
     branches:
       - '**'
-  release:
-    types:
-      - published
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -121,7 +120,7 @@ jobs:
     permissions:
       id-token: write
     runs-on: ubuntu-latest
-    if: github.event_name == 'release' && github.event.action == 'published'
+    if: startsWith(github.event.ref, 'refs/tags')
     steps:
       - uses: actions/download-artifact@v4
         with:
