--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,12 @@ requires = [
     "setuptools",
     "numpy >= 1.16.2",
 ]
+
+[tool.cibuildwheel.linux]
+manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64:2025.06.05-1"
+manylinux-pypy_x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64:2025.06.05-1"
+musllinux-x86_64-image = "quay.io/pypa/musllinux_1_2_x86_64:2025.06.07-2"
+
+manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64:2025.06.07-1"
+manylinux-pypy_aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64:2025.06.07-1"
+musllinux-aarch64-image = "quay.io/pypa/musllinux_1_2_aarch64:2025.06.07-2"
